Preserve the configured order of REST compression media types
Prefer `HashSet` constructor over `Set.copyOf`, because the latter uses a specific implementation of `AbstractImmutableSet` and iteration order is not guaranteed to match the insertion order, even when set elements implement a stable `hashCode()`. Helps with binary reproducibility of the generated bytecode, and fixes following integration tests modules:
- `vertx-http-compressors/all`
- `vertx-http-compressors/some`